--- a/pom.xml
+++ b/pom.xml
@@ -14,28 +14,24 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <vlcj.version>3.10.1</vlcj.version>
+        <final.jar.name>${project.artifactId}-${project.version}.jar</final.jar.name>
     </properties>
 
     <dependencies>
-
-        <!-- SQLite JDBC Driver -->
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.45.1.0</version>
         </dependency>
-
-        <!-- Jackson for JSON parsing -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.17.1</version>
         </dependency>
-
         <dependency>
             <groupId>uk.co.caprica</groupId>
             <artifactId>vlcj</artifactId>
-            <version>3.10.1</version>
+            <version>${vlcj.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -62,7 +58,6 @@
             <artifactId>ikonli-materialdesign-pack</artifactId>
             <version>2.6.0</version>
         </dependency>
-
     </dependencies>
 
     <build>
@@ -77,24 +72,21 @@
                 </configuration>
             </plugin>
 
-            <!-- 新增: 复制外部二进制文件的插件配置 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>3.2.0</version> <!-- 使用一个稳定的版本 -->
+                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <id>copy-external-binaries</id>
-                        <phase>process-resources</phase> <!-- 在处理资源阶段执行 -->
+                        <phase>process-resources</phase>
                         <goals>
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
-                            <!-- 目标目录是 Maven 构建的 target 目录下的 bin 文件夹 -->
                             <outputDirectory>${project.build.directory}/bin</outputDirectory>
                             <resources>
                                 <resource>
-                                    <!-- 源目录是你的 external_binaries/win -->
                                     <directory>external_binaries/win</directory>
                                     <includes>
                                         <include>yt-dlp.exe</include>
@@ -107,8 +99,6 @@
                 </executions>
             </plugin>
 
-            <!-- Maven Shade Plugin for fat JAR  -->
-            <!-- 确保 MainApplication 是你的主类 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -124,6 +114,7 @@
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>com.bilibili.musicplayer.MainApplication</mainClass>
                                 </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                             </transformers>
                             <filters>
                                 <filter>
@@ -135,16 +126,13 @@
                                     </excludes>
                                 </filter>
                             </filters>
-                            <!-- 建议为最终的 JAR 指定一个 finalName，方便后续 Launch4j 和 Inno Setup 引用 -->
                             <finalName>${project.artifactId}-${project.version}</finalName>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
 
-            <!--
-            如果你还使用 Launch4j Maven Plugin 来生成 .exe，它的配置应该放在这里。
-            例如：
+            <!-- Launch4j Maven Plugin to generate .exe -->
             <plugin>
                 <groupId>com.akathist.maven.plugins.launch4j</groupId>
                 <artifactId>launch4j-maven-plugin</artifactId>
@@ -157,25 +145,27 @@
                             <goal>launch4j</goal>
                         </goals>
                         <configuration>
-                            <headerType>gui</headerType>
-                            <jar>${project.build.directory}/${project.artifactId}-${project.version}.jar</jar>
+                            <headerType>gui</headerType> <!-- 保持为 console 以便调试 -->
+                            <jar>${final.jar.name}</jar>
                             <outfile>${project.build.directory}/${project.artifactId}.exe</outfile>
                             <dontWrapJar>true</dontWrapJar>
-                            <errTitle>BiliMusicPlayer</errTitle>
+                            <errTitle>${project.name}</errTitle>
+                            <icon>src/main/resources/icons/app_icon.ico</icon>
+                            <jre>
+                                <path>./jre</path>
+                                <minVersion>1.8.0</minVersion>
+                                <maxVersion>1.8.999</maxVersion>
+                                <initialHeapSize>256</initialHeapSize>
+                                <maxHeapSize>1024</maxHeapSize>
+                            </jre>
                             <classPath>
                                 <mainClass>com.bilibili.musicplayer.MainApplication</mainClass>
-                                <addDependencies>false</addDependencies>
                             </classPath>
-                            <jre>
-                                <path>./jre</path> // 如果你捆绑 JRE
-                                <minVersion>1.8.0</minVersion>
-                            </jre>
-                            <icon>src/main/resources/icons/app_icon.ico</icon> // 可选的应用图标
+                            <cmdLine>-Djna.library.path=./vlc</cmdLine>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
-            -->
         </plugins>
     </build>
 </project>
