--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -6,7 +6,12 @@ add_executable(BiliMusicPlayer
     "ServiceRegistry.h"
 )
 
+set_target_properties(BiliMusicPlayer PROPERTIES
+    AUTOMOC ON
+)
+
 target_link_libraries(BiliMusicPlayer PRIVATE
     ui
     Qt6::Widgets
+    Qt6::Core
 )
