--- a/infra/CMakeLists.txt
+++ b/infra/CMakeLists.txt
@@ -1,15 +1,13 @@
 add_library(infra STATIC
-    "FfmpegClient.cpp"
-    "FfmpegClient.h"
-    "FileSystemHelper.cpp"
-    "FileSystemHelper.h"
-    "Logger.cpp"
-    "Logger.h"
     "ProcessRunner.cpp"
     "ProcessRunner.h"
     "YtDlpClient.cpp"
     "YtDlpClient.h"
-)
+    "DownloadConfig.h" 
+    "DownloadConfig.cpp" 
+    "MetadataParser.h"
+    "MetadataParser.cpp" 
+    )
 
 target_link_libraries(infra PUBLIC
     common
