--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -1,11 +1,23 @@
-add_library(ui STATIC
-    "windows/MainWindow.cpp"
-    "windows/MainWindow.h"
-    "windows/MainWindow.ui"
-    "resources.qrc"
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTORCC ON)
+
+add_library(ui STATIC)
+
+target_sources(ui PRIVATE
+    windows/MainWindow.cpp
+    windows/MainWindow.ui
+    components/PlaybackBar.cpp
+    components/HoverButton.cpp
+    resources.qrc
 )
 
 target_link_libraries(ui PUBLIC
     viewmodel
+    common
     Qt6::Widgets
+)
+
+target_include_directories(ui PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}
 )
