完成了下载板块，下一步需要实现 1.下载后的文件名为 bv号.文件后缀 2.完成设置界面 3.设置界面需要能够设置默认的音乐质量和音乐格式（mp3等）

--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -10,7 +10,10 @@ target_sources(ui PRIVATE
     components/PlaybackBar.cpp
     components/HoverButton.cpp
     resources.qrc
-)
+    pages/DownloadManagerPage.h 
+    pages/DownloadManagerPage.cpp 
+    components/DownloadTaskItem.h 
+    components/DownloadTaskItem.cpp)
 
 target_link_libraries(ui PUBLIC
     viewmodel
