feat: 优化音质选择器并实现音质-格式自动联动
- 重新排列音质选项，按从大到小顺序（最佳音质→小文件OPUS）
- 实现音质选择与格式选择的自动联动
- 设置页面的格式选择器改为只读显示，由音质自动决定
- 统一下载管理页面和设置页面的音质选项顺序
- 添加音质-格式映射表（setupQualityFormatMapping）
- 修复音质预设不一致的问题（standard_mp3 → medium_quality_mp3）
- 新增 lossless_wav 和 best_quality 音质预设支持
- 优化配置加载逻辑，确保启动时正确应用默认音质

--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -5,15 +5,37 @@ set(CMAKE_AUTORCC ON)
 add_library(ui STATIC)
 
 target_sources(ui PRIVATE
+    # ========== 窗口 ==========
     windows/MainWindow.cpp
     windows/MainWindow.ui
+    
+    # ========== 组件 ==========
     components/PlaybackBar.cpp
     components/HoverButton.cpp
+    components/DownloadTaskItem.h
+    components/DownloadTaskItem.cpp
+    
+    # ========== 下载页面 ==========
+    pages/DownloadManagerPage.h
+    pages/DownloadManagerPage.cpp
+    
+    # ========== 设置页面 ==========
+    pages/settings/SettingsPage.h
+    pages/settings/SettingsPage.cpp
+    pages/settings/DownloadSettingsWidget.h
+    pages/settings/DownloadSettingsWidget.cpp
+    pages/settings/DatabaseSettingsWidget.h
+    pages/settings/DatabaseSettingsWidget.cpp
+    pages/settings/ToolsSettingsWidget.h
+    pages/settings/ToolsSettingsWidget.cpp
+    pages/settings/UISettingsWidget.h
+    pages/settings/UISettingsWidget.cpp
+    pages/settings/AdvancedSettingsWidget.h
+    pages/settings/AdvancedSettingsWidget.cpp
+    
+    # ========== 资源 ==========
     resources.qrc
-    pages/DownloadManagerPage.h 
-    pages/DownloadManagerPage.cpp 
-    components/DownloadTaskItem.h 
-    components/DownloadTaskItem.cpp)
+)
 
 target_link_libraries(ui PUBLIC
     viewmodel
